<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recipe Explorer</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="recipes">Recipes</string>
    <string name="no_favorites">No favorites yet</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="servings">Servings</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="profile_greeting">Hello, %1$s</string>
    <string name="guest">Guest</string>
</resources>
